# scratchbox

./: .gitignore  README.md  scratch_docker.sh  scratchbox.sublime-project
aquaponic/: README.md
aws/: aws.md  cloudinit1.sh  set_cache_headers.py  update_dynip.py
cheatsheets/: git.md  os.md  software.md
cpp/: Makefile  addressbook.capnp  addressbook.capnp.c++  addressbook.capnp.h  test
crossbar/pgtest1/: db.py  index.html
cruncher/: .bashrc  .storagetest.py.swp  isdct.md  mail-integration.md  perftests.md  postgresxl.md  postgresxl.py
cruncher/engines-compared/: normalized-iops.ods
cruncher/gitlab/: README.md
cruncher/pgxl/: README.md  pgxc_ctl-16x.conf  pgxc_ctl-32x.conf  pgxc_ctl.conf  questions.md
cruncher/results/: freebsd_kernel_conf.md  (+1 more)
diskchecker/: README.md  diskchecker.pl
docker/: .gitignore  BUILDING.md  LICENSE  Makefile  README.md  pushed_images.md  versions.sh
docs/: srdp.py  uistack.md
dotfiles/: .vimrc
freebsd/: BRUMMER_KERNEL_10_1  README.md  cruncher.md  dhcpd.md  openssl.md  virtualbox.md
geopol/: Geopol Baltics.odg  Geopol Baltics.xcf
git/: fingerprint_repos.py  tavendo_to_crossbario_ip_git_reporefs_fingerprints.csv
just/: README.md
lmdb/: Makefile  README.md  cmdscale100M  cmdscale1G  db_bench_mdb  lmdb_test1.xls
newspeak/: README.md
playlists/: disco.xspf  faster-than-ambient.xspf  jazz-is-different.xspf
postgres/: postgresql_on_zfs.md
profile/: README.md  profile_oberstet_20200614.odt  profile_oberstet_channels.ods
putty/: createPuttyShortcuts.py
python/: upload_vmprofile.py
rust/tuttests/rtic1/: Cargo.toml  README.md
rust/tuttests/rtic1/src/: main.rs
rust/tuttests/test2/: Cargo.toml
rust/tuttests/test2/src/: main.rs
rust/tuttests/test3/: Cargo.toml
rust/tuttests/test3/src/: auth_generated.rs  main.rs  pubsub_generated.rs  roles_generated.rs  rpc_generated.rs  session_generated.rs  types_generated.rs  wamp_generated.rs
tool/: x-git-fetch.sh  x-git-pull.sh  x-git-status.sh
vim/: .gitignore  .vimrc  README.md  install.sh
vscode/: cbsh.code-workspace
(+530 files in other folders)
