[package]
name = "rtic1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.3"
cortex-m = "0.7.0"
rtic-monotonic = "1.0.0"
rtic-core = "1.0.0"
heapless = "0.7.7"
bare-metal = "1.0.0"
version_check = "0.9"
lm3s6965 = "0.1.3"
cortex-m-semihosting = "0.3.3"
systick-monotonic = "1.0.0"
trybuild = "1"

[profile.release]
codegen-units = 1
lto = true

# do not optimize proc-macro deps or build scripts
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }

[features]
test-critical-section = ["cortex-m/critical-section-single-core"]

# [[example]]
# name = "pool"
# required-features = ["test-critical-section"]