[package]
name = "test2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = "0.7.7"
web3 = "0.18.0"
libp2p = { version = "0.50.0", features = ["gossipsub"] }
wamp_async = "0.3.1"
