[package]
name = "test3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
# flatbuffers = "22.10.26"
flatbuffers = "22.9.29"
# minicbor = "0.19.0" # https://twittner.gitlab.io/minicbor/minicbor/index.html
flexbuffers = "2.0.0"

# serde = "1.0.151"
# serde_derive = "1.0.151"

# https://serde.rs/no-std.html
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
